<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/cycleText" />
        
        <TextView
            android:id="@+id/senseTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/cycleInit" />

        <SeekBar
            android:id="@+id/senseSeekBar"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:max="6"
            android:progress="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/sleepTitle" />
        
        <TextView
            android:id="@+id/intervalTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/sleepInit" />
        
        <SeekBar
            android:id="@+id/waitSeekBar"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:max="6"
            android:progress="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
             android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/delayTitle" />
        
        <TextView
            android:id="@+id/delayTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/sleepInit" />
        
        <SeekBar
            android:id="@+id/delaySeekBar"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:max="6"
            android:progress="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/enableTriggerButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/startTrigger" />

        <Button
            android:id="@+id/disableTriggerButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stopTrigger" />
    </LinearLayout>

</RelativeLayout>